kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birthdays-calendar-deployment
  labels:
    app: birthdays-calendar
spec:
  replicas: 3

  selector:
    matchLabels:
      app: birthdays-calendar

  template:
    metadata:
      labels:
        app: birthdays-calendar
    spec:
      containers:
      - name: birthdays-calendar
        image: sirikon/birthdays-calendar:${CIRCLE_BUILD_NUM}
        ports:
        - containerPort: 80
