kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: birthdays-calendar-service
spec:
  selector:
    app: birthdays-calendar
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
